# IOT-Stream-lab

./: LICENSE  README.md
docker/: docker-compose.yml
fake_data_generator/: dockerfile  generate_data.py  pyproject.toml
flink/: pom.xml
flink/src/main/java/com/yc/: KafkaSourceDatabaseSink_1.java  StaticSourceToDatabaseSink_0.java
